@@ -1,4 +1,4 @@
-# $Id: configure.in,v 1.34 2006-10-14 16:34:51 thep Exp $
+# $Id: configure.in,v 1.35 2007-03-03 08:30:36 thep Exp $
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.50)
@@ -24,6 +24,7 @@ AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
+AC_LIBTOOL_WIN32_DLL
 AM_PROG_LIBTOOL
 
 AC_MSG_CHECKING([for Win32])
